client/styles/style.css
body {
  background-color: #202020;
  color: #6C8A95;
  font-family: 'Open Sans', sans-serif;
}

.angular-google-map-container {
  height: 400px;
  width: 400px;
}

.item-text {
  color: blue;
  cursor: pointer;
}

#google-map div {
  border-style: none;
}

h1, h3{
  font-family: 'Montserrat Alternates', sans-serif;
  text-align: center;
  color: #F0A83A;
}

.event {
  padding: 5px;
  color: #9B9C9B;
  margin: 5px;
}

.event:hover{
  background-color: #4B433D;
}

.container {
  width: 100%;
}

.search-bar {
  text-align: center;
  width: 100%;
  font-size: 1.2em;
}

.search-box {
  width: 70%;
  font-size: 1em;
}

.select-box {
  cursor:pointer;
  color: #6C8A95;
  text-align: center;
  font-size: .8em;
  background: transparent;
  border: none;
}

.title {
  font-size: 1.2em;
  color: #A9342C;
}

.time, .phone {
  color: #6C8A95;
}

.logo {
  position: relative;
  float: right;
  top: 0px;
  height: 25px;
}

.address {
  color: #6C8A95;
}

.cart {
  height: 100%;
}

.cart-item {
  margin: 1px;
  color: #9B9C9B;
}

.home-button {
  color: #6C8A95;
  font-size: .8em;
  padding: 5px;
  border: 1px solid #6C8A95;
  text-decoration: none;
}

.home-button:hover {
  border: 1px solid red;
  color: red;
}

.user-status {
  position: absolute;
  top: 10px;
  right: 5px;
}

.spinner {
  margin: 100px auto;
  width: 50px;
  height: 30px;
  text-align: center;
  font-size: 10px;
}

.spinner > div {
  background-color: #F0A83A;
  height: 100%;
  width: 6px;
  display: inline-block;
  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
  animation: stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.spinner .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

@-webkit-keyframes stretchdelay {
  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
  20% { -webkit-transform: scaleY(1.0) }
}

@keyframes stretchdelay {
  0%, 40%, 100% {
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }  20% {
    transform: scaleY(1.0);
    -webkit-transform: scaleY(1.0);
  }
}

.ng-modal-overlay {
  position: fixed;
  z-index:9999;
  top: 0px;
  left: 0px;
  width:100%;
  height:100%;
  background-color:#000000;
  opacity: 0.8;
}
.ng-modal-dialog {
  z-index:10000;
  position: fixed;
  width: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  background-color: #202020;
  box-shadow: 4px 4px 80px #000;
}
.ng-modal-dialog-content {
  text-align: center;
  padding:10px;
  color: #6C8A95;
}

.ng-modal-dialog-content input{
  width: 60%;
}
.ng-modal-close {
  position: fixed;
  top: 3px;
  right: 5px;
  padding: 5px;
  cursor: pointer;
  font-size: 120%;
  display: inline-block;
  font-weight: bold;
  font-family: 'arial', 'sans-serif';
}

.shopping-cart {
  position: fixed;
  overflow: auto;
  width: 16%;
}

